--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Hello World!",
   "main": "main.js",
-  "author": "John Doe",
+  "author": "Vivijojo",
   "license": "MIT",
   "scripts": {
     "start": "electron ."
